# llm-rag-eval

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: basic_eval.py  sample_dataset.json
rag_eval/: __init__.py  pipeline.py  reporter.py  types.py
rag_eval/evaluators/: __init__.py  answer_relevance.py  base.py  context_relevance.py  faithfulness.py  hallucination.py
rag_eval/providers/: __init__.py  base.py  gemini.py  ollama.py
tests/: test_evaluators.py  test_pipeline.py  test_providers.py  test_providers_ollama.py  test_reporter.py  test_types.py
